Update styles to fix typewriter jumps

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -10,6 +10,7 @@
   z-index: 10;
   display: flex;
   flex-direction: column;
+  // max-width: 600px;
   
 }
 
@@ -56,10 +57,17 @@
   letter-spacing: 6px;
 }
 .home-text-typer {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  // padding-top: 2rem;
+  // padding-bottom: 3rem;
+  margin-top: 2em;
+  padding-right: 1em;
   // background-color: #282c34;
-  min-height: 25vh;
+  height: 4em;
+  width:0;
+  min-width: 100%;
+    // -webkit-transform: translateY(100%); //if your div is 200px, this will move it down by 200px, if it is 100px it will down by 100px etc
+    // transform: translateY(100%);         //if your div is 200px, this will move it down by 200px, if it is 100px it will down by 100px etc
+    // // margin-top: -10px;
   display: block;
   // flex-direction: column;
   // align-items: center;
