--- a/src/components/Mobile.scss
+++ b/src/components/Mobile.scss
@@ -1,22 +1,37 @@
 @media all and (min-width:960px) and (max-width: 1024px) {
   /* put your css styles in here */
+  .stack {
+    width: 100%;
+  }
 }
 
 @media all and (min-width:801px) and (max-width: 959px) {
 
   /* put your css styles in here */
+  .stack {
+    width: 100%;
+  }
 }
 
 @media all and (min-width:769px) and (max-width: 800px) {
   /* put your css styles in here */
+  .stack {
+    width: 100%;
+  }
 }
 
 @media all and (min-width:569px) and (max-width: 768px) {
   /* put your css styles in here */
+  .stack {
+    width: 100%;
+  }
 }
 
 @media all and (min-width:481px) and (max-width: 568px) {
   /* put your css styles in here */
+  .stack {
+    width: 100%;
+  }
 }
 
 @media all and (min-width:321px) and (max-width: 480px) {
@@ -53,7 +68,14 @@
     font-size: 1.5em;
   }
 
+  .stack {
+    width: 100%;
+  }
 
+  .home-text-typer {
+    margin-top: 2em;
+    height: 7em;
+  }
 
 }
 
@@ -66,4 +88,7 @@
 
 @media all and (max-width: 320px) and (orientation:landscape) {
   /* styles here */
+  .stack {
+    width: 100%;
+  }
 }
